test-aws/aws_configs/eu-west-3/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-e593248c",
     "NetworkAclId": "acl-34ef2b5d",
     "SubnetId": "subnet-e3966c8a"
    },
    {
     "NetworkAclAssociationId": "aclassoc-e793248e",
     "NetworkAclId": "acl-34ef2b5d",
     "SubnetId": "subnet-7b0f3231"
    },
    {
     "NetworkAclAssociationId": "aclassoc-e493248d",
     "NetworkAclId": "acl-34ef2b5d",
     "SubnetId": "subnet-c1aeb1b9"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-34ef2b5d",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-7f798716"
  }
 ]
}
